responsive to small viewports, fixing overlay z-index by removing .container

--- a/src/stylesheets/Header.module.css
+++ b/src/stylesheets/Header.module.css
@@ -12,7 +12,7 @@
   position: fixed;
   top: 0;
   width: 100vw;
-  z-index: 1;
+  z-index: 3;
 }
 
 .logo {
